--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <img src="../images/my_company_logo.png">
 
+<img src="https://i.imgur.com/H1qsYEl.png" alt="comedic crow gets wholesome support">
 
 </body>
 </html>
