--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 
 <img src="https://i.imgur.com/H1qsYEl.png" alt="comedic crow gets wholesome support">
 
+<img src="../images/my_company_logo.png" alt="my company name" title="We're here to help you!">
+
 </body>
 </html>
