--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
   <!-- Your code here -->
 
-<img src="../images/my_company_logo.png">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
 
-<img src="https://i.imgur.com/H1qsYEl.png" alt="comedic crow gets wholesome support">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="comedic crow gets wholesome support">
 
-<img src="../images/my_company_logo.png" alt="my company name" title="We're here to help you!">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="my company name" title="We're here to help you!">
 
 </body>
 </html>
