--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 
   <!-- Your code here -->
 
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="comedic crow gets wholesome support">
+
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="my company name" title="We're here to help you!">
+
 </body>
 </html>
